<resources>
    <string name="app_name">My Application</string>
    <string name="name_text">MD. FAZLE RABBI</string>
    <string name="age_text">XXIII years old</string>
    <string name="title_text">What do you want to bye?</string>
    <string name="milk_text">Milk</string>
    <string name="sugar_text">Sugar</string>
    <string name="water_text">Water</string>
    <string name="switch_text">Switch</string>
    <string name="result">Result_text</string>
    <string name="show_date_picker_dialog">show date picker dialog</string>
    <string name="show_time">show time</string>
    <string name="time_picker_dialog">Time picker dialog</string>
</resources>