<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="#00BCD4"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/nameTextId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_text"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/purple_700"
        android:textColorHighlight="@android:color/holo_red_dark"
        android:textIsSelectable="true"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ageTextId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/age_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_text"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <CheckBox
            android:id="@+id/milkCheB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/milk_text"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="setListener"

            />
        <CheckBox
            android:id="@+id/waterCheB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/water_text"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="setListener"



            />
        <CheckBox
            android:id="@+id/sugarCheB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/sugar_text"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="setListener"


            />
        <Button
            android:id="@+id/showBtnID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Show"
            android:backgroundTint="#E91E63"
            android:onClick="setListener"

            />

    </LinearLayout>

<TextView
    android:id="@+id/showInTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:hint="Result"
    android:textSize="50sp"
    android:onClick="setListener"
    />

</LinearLayout>